[gd_scene load_steps=4 format=3 uid="uid://w0wxr4gd4qf7"]

[ext_resource type="Script" uid="uid://dvs8r007h4ykg" path="res://weapons/Bullet.gd" id="1_ldcvn"]
[ext_resource type="Texture2D" uid="uid://dbyww6axgyxgp" path="res://assets/New_All_Fire_Bullet_Pixel_16x16/All_Fire_Bullet_Pixel_16x16_00.png" id="2_fqhr1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yf4bj"]
size = Vector2(8, 4)

[node name="Bullet" type="Area2D"]
script = ExtResource("1_ldcvn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 0)
shape = SubResource("RectangleShape2D_yf4bj")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(4, 0)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_fqhr1")
region_enabled = true
region_rect = Rect2(373, 331, 24, 10)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(4, 0)
scale = Vector2(0.4, 0.2)

[node name="KillTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="KillTimer" to="." method="_on_kill_timer_timeout"]
